--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <mainClass>com.alibaba.tailbase.MultiEntry</mainClass>
+                    <mainClass>com.shenlinqiang.mytailbased.MyTailBasedApplication</mainClass>
                 </configuration>
             </plugin>
         </plugins>
