--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
-            <version>${netty4.version}</version>
+            <version>4.1.12.Final</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
